# talent-plan

./: README.md
courses/rust/projects/project-1/: Cargo.toml
courses/rust/projects/project-1/src/: lib.rs
courses/rust/projects/project-2/: Cargo.toml
courses/rust/projects/project-2/src/: lib.rs
courses/rust/projects/project-3/: Cargo.toml
courses/rust/projects/project-3/benches/: benches.rs
courses/rust/projects/project-3/src/: client.rs  error.rs  lib.rs  protocol.rs
courses/rust/projects/project-3/src/engines/: kvs.rs  sled.rs
courses/rust/projects/project-4/: Cargo.toml  checkin
courses/rust/projects/project-4/benches/: benches.rs
courses/rust/projects/project-4/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs  thread_pool.rs
courses/rust/projects/project-4/src/engines/: kvs.rs  mod.rs  sled.rs
courses/rust/projects/project-4/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
courses/rust/projects/project-4/tests/: thread_pool.rs
