[package]
name = "kvs"
version = "0.1.0"
authors = ["Graham Lowe"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
