[package]
name = "kvs"
version = "0.1.0"
authors = ["Graham Lowe"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
rmp-serde = "1.1.1"
serde = { version = "1.0.149", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.3.0"
walkdir = "2.3.2"
